# vSmart-Visibility

./: .gitignore  BABEL_WARNING_INFO.md  BORDER_ALIGNMENT_FIXED.md  BORDER_ALIGNMENT_ISSUE.md  DESIGN_TOKENS_MAPPING.md  Dockerfile.frontend  FINAL_COMPLETION_REPORT.md  FINAL_STATUS.md  FIXES_APPLIED.md  ICON_SIZE_FIX.md  LICENSE  PAGE_BACKGROUND_FIX.md  PAGE_WIDTH_FIX.md  README.md  TABLE_ALIGNMENT_FIXED.md  TABLE_BORDER_ANALYSIS.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  index.html  nginx.frontend.conf  package-lock.json  package.json  vite.config.ts
RAG-Doc/: 27.1  vSmart Visibility Team EC review -20260401 0258-1.vtt  27.1 vSmart Visibility Kick off meeting-20260303 2134-1.vtt  Catalyst SD-WAN Field Advisory Board-20260429 1706-1 (1).vtt  UX review.vtt  vSmart PRD and requirement - CC due tomorrow.-20260316 2106-1 (1).vtt  vSmart UI review -20260409 2212-1.vtt  vSmart Visibility (aka insights) - DEV syncup_status-20260318 0450-1.vtt  vSmart discuss EC review feedback-20260401 2334-1.vtt  (+4 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging_setup.py  main.py
backend/app/api/: auth.py  chat.py  health.py  ingest.py  sources.py
backend/app/auth/: deps.py  security.py
backend/app/db/: models.py  session.py
backend/app/ingest/: brief.py  chunker.py  embed.py  pipeline.py  status.py  store.py  watcher.py  worker.py
backend/app/ingest/parsers/: pdf.py  vlm.py  vtt.py
backend/app/llm/: client.py
backend/app/rag/: index.py  prompts.py  retriever.py  router.py
backend/tests/: test_auth_security.py  test_brief.py  test_chunker.py  test_sources_path_traversal.py
(+64 files in other folders)
